# lotsawa

./: .gitignore  MANIFEST.in  README.md  ds_zero_cpu_offload.json  env-minimal.yml  env.yaml  publish_sota.sh  sample_word_exclusion_list.yaml  setup.cfg
lotsawa/: part_of_speech.py  retranslate.py  translate.py
lotsawa/config/mode/: batch.yaml
lotsawa/token_classification.config/: part_of_speech.yaml
lotsawa/token_classification_config/model/: intersyllabic-olive-cormorant.yaml
lotsawa/translation.config/generation/: fast.yaml
lotsawa/translation.config/help/: retranslate.yaml
lotsawa/translation.config/mode/: interactive.yaml
lotsawa/translation.config/model/: cased.yaml
lotsawa/translation_config/: retranslate.yaml
lotsawa/translation_config/generation/: slow.yaml
lotsawa/translation_config/help/: translate.yaml
src/lotsawa/: part_of_speech.py  retranslate.py  translate.py
src/lotsawa/token_classification_config/: part_of_speech.yaml
src/lotsawa/token_classification_config/help/: part-of-speech.yaml
src/lotsawa/token_classification_config/mode/: batch.yaml  interactive.yaml
src/lotsawa/translation_config/: retranslate.yaml  translate.yaml
src/lotsawa/translation_config/generation/: alphabet-inclusions.yaml  best.yaml  medium.yaml  reranked-smoothed-beam-search-with-context.yaml
src/lotsawa/translation_config/help/: retranslate.yaml  translate-research.yaml
src/lotsawa/translation_config/knowledge/: glossary.yaml
src/lotsawa/translation_config/mode/: batch.yaml
src/lotsawa/translation_config/model/: current-experiment.yaml  (+4 more)
(+2 files in other folders)
