[metadata]
name = lotsawa
version = 0.1.0
author = CompassionAI
author_email = contact@compassion-ai.org
description = Machine translation and understanding of classical Tibetan
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/compassionai/lotsawa
project_urls =
    Bug Tracker = https://github.com/compassionai/issues
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.6
install_requires =
    compassionai-common>=0.1.0
    compassionai-manas>=0.1.0
    compassionai-garland>=0.1.0
    tqdm>=4.64.1
include_package_data = True

[options.entry_points]
console_scripts =
    lotsawa-translate = lotsawa.translate:main
    lotsawa-retranslate = lotsawa.retranslate:main
    lotsawa-words = lotsawa.part_of_speech:main